# cpp-basics

./: .gitignore  README.md
basics/src/: main.cpp
constants_and_strings/src/: main.cpp
control_flow/ball/src/: constants.h  main.cpp
control_flow/hilo/src/: main.cpp
control_flow/prime_numbers/src/: main.cpp
error_detection_and_handling/src/: main.cpp
function_overloading_and_templates/add/src/: main.cpp
function_overloading_and_templates/mult/src/: main.cpp
function_overloading_and_templates/sub/src/: main.cpp
functions_and_files/: CMakeLists.txt
functions_and_files/src/: io.cpp  io.h  main.cpp
fundamental_data_types/: CMakeLists.txt
fundamental_data_types/src/: main.cpp
operators/src/: main.cpp
scope_duration_linkage/q_02/src/: constants.h  main.cpp
scope_duration_linkage/q_03/src/: main.cpp
type_conversion_alias_deduction/src/: main.cpp
